# dm_test

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  FINAL_REVIEW.md
src/: main.py
src/application/commands/: activate_user_command.py  register_user_command.py
src/application/dto/: activated_user_dto.py  registered_user_dto.py
src/application/exceptions/: account_activation_errors.py  user_registration_errors.py
src/application/ports/: activation_code_generator.py  activation_code_hasher.py  clock.py  email_sender.py  password_hasher.py  user_repository.py
src/application/use_cases/: activate_user.py  register_user.py
src/bootstrap/: app.py  dependencies.py  lifespan.py
src/config/: metadata.py  settings.py
src/domain/entities/: user.py
src/domain/value_objects/: activation_code.py  email.py
src/infrastructure/database/: migration_runner.py  postgres_pool.py  postgres_user_repository.py
src/infrastructure/database/migrations/: 001_create_users.sql
src/infrastructure/external_services/: console_email_sender.py  utc_clock.py
src/infrastructure/security/: hmac_activation_code_hasher.py  pbkdf2_password_hasher.py  random_activation_code_generator.py
src/presentation/exception_handlers/: register_exception_handlers.py
src/presentation/mappers/: user_mapper.py
src/presentation/routes/: health.py  users.py
src/presentation/schemas/requests/: activate_user_request.py  register_user_request.py
src/presentation/schemas/responses/: health_response.py  user_response.py
tests/: conftest.py  helpers.py
tests/functional/: test_activation_endpoint.py  test_health_endpoint.py  test_registration_endpoint.py
tests/integration/: test_activation_persistence.py  test_postgres_user_repository.py
tests/regression/: test_activation_regressions.py  test_registration_regressions.py
tests/unit/: test_activate_user_use_case.py  test_register_user_use_case.py
